--- a/index.html
+++ b/index.html
@@ -1,10 +1,14 @@
-<!doctype html>
-<html lang="en">
+<!DOCTYPE html>
+<html lang="es">
   <head>
     <meta charset="UTF-8" />
     <link rel="icon" type="image/svg+xml" href="/vite.svg" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Vite + React</title>
+    <meta name="description" content="Cronometro básico con React" />
+    <meta name="author" content="Brayan Duque" />
+    <meta name="keywords" content="cronometro, tiempo, react" />
+    <meta name="robots" content="index, follow" />
+    <title>Cronometro</title>
   </head>
   <body>
     <div id="root"></div>
